fix: Risolve il problema di overflow del testo nella barra laterale

--- a/apps/static/assets/scss/custom/_custom.scss
+++ b/apps/static/assets/scss/custom/_custom.scss
@@ -303,6 +303,9 @@ pre[class*=language-]{
     .sidebar-inner {
         height: 100vh;
     }
+    .nav {
+        white-space: normal !important;
+    }
 
     .multi-level{
         .nav-link{
